--- a/package.json
+++ b/package.json
@@ -20,28 +20,29 @@
   },
   "homepage": "https://github.com/taylorbryant/next-starter-tailwind#readme",
   "dependencies": {
-    "next": "10.0.4",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "@heroicons/react": "^1.0.1",
+    "next": "10.1.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.2.0",
-    "@tailwindcss/forms": "^0.2.1",
-    "@tailwindcss/typography": "^0.3.1",
-    "@types/node": "^14.14.16",
-    "@types/react": "^17.0.0",
-    "@types/react-transition-group": "^4.4.0",
-    "autoprefixer": "10.1.0",
-    "classnames": "2.2.6",
-    "postcss": "8.2.1",
+    "@tailwindcss/forms": "^0.3.2",
+    "@tailwindcss/typography": "^0.4.0",
+    "@types/node": "^14.14.39",
+    "@types/react": "^17.0.3",
+    "@types/react-transition-group": "^4.4.1",
+    "autoprefixer": "10.2.5",
+    "classnames": "2.3.1",
+    "postcss": "8.2.10",
     "postcss-100vh-fix": "1.0.2",
     "postcss-flexbugs-fixes": "5.0.2",
-    "postcss-hover-media-feature": "1.0.0",
+    "postcss-hover-media-feature": "1.0.1",
     "postcss-preset-env": "6.7.0",
     "prettier": "^2.2.1",
-    "tailwindcss": "2.0.2",
-    "typescript": "^4.1.3"
+    "tailwindcss": "2.1.1",
+    "typescript": "^4.2.4"
   },
   "prettier": {
     "singleQuote": true,
