--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "homepage": "https://github.com/taylorbryant/next-starter-tailwind#readme",
   "dependencies": {
     "@heroicons/react": "^1.0.1",
-    "next": "11.0.0",
+    "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-transition-group": "^4.4.2"
@@ -35,13 +35,15 @@
     "@types/react-transition-group": "^4.4.1",
     "autoprefixer": "10.2.6",
     "classnames": "2.3.1",
+    "eslint": "^7.29.0",
+    "eslint-config-next": "^11.0.1",
     "postcss": "8.3.5",
     "postcss-100vh-fix": "1.0.2",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-hover-media-feature": "1.0.1",
     "postcss-preset-env": "6.7.0",
     "prettier": "^2.3.1",
-    "tailwindcss": "2.2.2",
+    "tailwindcss": "2.2.4",
     "typescript": "^4.3.4"
   },
   "prettier": {
